# QuProlog

./: .gitignore  INSTALL  LICENSE  LOGIN_CMDS  LOGIN_CMDS.in  Makefile  Makefile.in  PROFILE_CMDS  PROFILE_CMDS.in  README  acconfig.h  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.in  qp.vpj  qp.vpwhist  qp.vtg
doc/man/: windex
doc/man/man1/: qa.1  qc.1  qecat.1  qem.1  ql.1  qp.1
doc/manual/: COVER.html  INDEX.html  MAIN.html  NAV.html  SEC1.html  SEC2.html  SEC3.html  SEC4.html  SEC5.html  TOC.html
examples/: README  consumer.ql  db.ql  http_connect.ql  incomplete_unify.ql  lambda.ql  lambda2.ql  lambda_type.ql  linda_client.ql  linda_server.ql  natural_deduction.ql  producer.ql  router_monitor.ql  tcp_client.ql  tcp_server.ql
prolog/: Makefile.in
prolog/compiler/: Makefile  Makefile.in  compile.qs  compile_pred.qs  custom.qs  flatten.qs  index.qs  internal_form.qs  lastxreg.qs  list_util.qs  pretrans.qs  pseudoinstr.qs  special.qs  write.qs  xregs.qs
prolog/qc1/: Makefile  Makefile.in  qc1.qs
prolog/qecat/: Makefile  qecat.qs
prolog/qg/: Makefile  Makefile.in  qg.qs
prolog/qp/: Makefile  Makefile.in  qp.qs
src/: Dependencies.heap  Dependencies.ipc  Dependencies.library  Dependencies.psi  Dependencies.qa  Dependencies.qdeal  Dependencies.qem  Dependencies.ql  Dependencies.thread  Makefile  Makefile.heap  Makefile.in  Makefile.ipc  Makefile.ipc.in  Makefile.library  Makefile.library.in  Makefile.psi  Makefile.psi.in  Makefile.qa  Makefile.qa.in  Makefile.qdeal  Makefile.qdeal.in  Makefile.qem  Makefile.qem.in  Makefile.ql  Makefile.ql.in  Makefile.qod  Makefile.qod.in  Makefile.thread  Makefile.thread.in  QuProlog.h  WinXGetopt.cc  WinXGetopt.h  acconfig.h  area_offsets.h  arithmetic.cc  arithmetic.h  arpa_inet.h  asm_int.h  asm_objects.h  (+317 more)
src/xqp/: interact.cc  interact.h  main.cc  qpconfig.cc  qpconfig.h  qthelp.cc  qthelp.h  term.cc  term.h  xqp.cc  xqp.h  xqp.pro  xqpqueries.cc  xqpqueries.h
src/xqpdebug/: interact.cc  interact.h  main.cc  pedro_connection.cc  pedro_connection.h  qpconfig.cc  qpconfig.h  xqpdebug.cc  xqpdebug.h  xqpdebug.pro  xqpdebug.pro.in
win_build/: README.txt  README.win  config.h  configure  cp2win.bat  modpath.iss  prepare_rel  start_win_release  win_install.iss
win_build/src_makefiles/: Makefile  Makefile.heap  Makefile.ipc  Makefile.library  Makefile.psi  Makefile.qa  Makefile.qdeal  Makefile.qem  Makefile.ql  Makefile.qod  Makefile.thread
win_build/src_makefiles_in/: Makefile.heap.in  Makefile.in  Makefile.library.in  Makefile.psi.in  Makefile.qa.in  Makefile.qdeal.in  Makefile.qem.in  Makefile.ql.in  Makefile.qod.in  Makefile.thread.in
